fix payment info flow on small devices

--- a/custom/plugins/MarkusTheme/src/Resources/app/storefront/src/scss/_header.scss
+++ b/custom/plugins/MarkusTheme/src/Resources/app/storefront/src/scss/_header.scss
@@ -665,3 +665,9 @@
         float: left;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .payment-info {
+        float: left !important;
+    }
+}
